--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,10 +21,4 @@ jobs:
           architecture: x64
       - name: Package with Maven
         run: mvn -B package
-      - name: Upload to Blob Builds
-        uses: WalshyDev/blob-builds/gh-action@main
-        with:
-          project: SlimefunAdvancements
-          apiToken: ${{ secrets.BLOB_BUILDS_API_TOKEN }}
-          file: ./target/sfadvancements.jar
-          releaseNotes: ${{ github.event.head_commit.message }}
+      - name: Upload
